--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <form class="container col-5 mt-5">
         <div class="mb-3">
             <h2>Datos personales</h2>
-            <label for="exampleInputEmail1" class="form-label mt-3">Nombre y apellidos</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for="nameInput" class="form-label mt-3">Nombre y apellidos</label>
+            <input type="email" class="form-control" id="nameInput" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">Texto abajo</div>
 
             <label for="exampleInputEmail1" class="form-label mt-3">Email address</label>
