--- a/cv.html
+++ b/cv.html
@@ -11,15 +11,15 @@
 <body>
     <div class="padre">
         <div class="lateral">
-            <img id="foto" src="carnet.jpg" alt="foto carnet">
+            <img id="foto" src="/assets/carnet.jpg" alt="foto carnet">
             <div class="contacto">
                 <h3 class="h-contacto">Contacto</h3>
-                <p class="p-lateral"><img id="icono" src="telefono.png" alt="icono movil"> 628585717</p>
-                <p class="p-lateral"><img id="icono" src="mail.png" alt="icono mail"> marsanchezsevillano@gmail.com</p>
-                <p class="p-lateral"><img id="icono" src="linkedin.png" alt="icono linkedin">   <a href="https://www.linkedin.com/in/mar-sanchez-sevillano-developer/" target="_blank">Mar Sánchez Sevillano</a></p>
-                <p class="p-lateral"><img id="icono" src="github.png" alt="icono github"> <a href="https://github.com/Mar8787/portfolio" target="_blank">Portfolio Mar8787</a>
+                <p class="p-lateral"><img id="icono" src="/assets/telefono.png" alt="icono movil"> 628585717</p>
+                <p class="p-lateral"><img id="icono" src="/assets/mail.png" alt="icono mail"> marsanchezsevillano@gmail.com</p>
+                <p class="p-lateral"><img id="icono" src="/assets/linkedin.png" alt="icono linkedin">   <a href="https://www.linkedin.com/in/mar-sanchez-sevillano-developer/" target="_blank">Mar Sánchez Sevillano</a></p>
+                <p class="p-lateral"><img id="icono" src="/assets/github.png" alt="icono github"> <a href="https://github.com/Mar8787/portfolio" target="_blank">Portfolio Mar8787</a>
                 </p>
-                <p class="p-lateral"><img id="icono" src="casa.png" alt="icono casa"> Jerez (Cádiz)</p>
+                <p class="p-lateral"><img id="icono" src="/assets/casa.png" alt="icono casa"> Jerez (Cádiz)</p>
             </div>
 
             <hr class="hr-lateral">
