--- a/cv.html
+++ b/cv.html
@@ -15,25 +15,26 @@
             <div class="contacto">
                 <h3 class="h-contacto">Contacto</h3>
                 <p class="p-lateral"><img id="icono" src="/assets/telefono.png" alt="icono movil"> 628585717</p>
-                <p class="p-lateral"><img id="icono" src="/assets/mail.png" alt="icono mail"> marsanchezsevillano@gmail.com</p>
-                <p class="p-lateral"><img id="icono" src="/assets/linkedin.png" alt="icono linkedin">   <a href="https://www.linkedin.com/in/mar-sanchez-sevillano-developer/" target="_blank">Mar Sánchez Sevillano</a></p>
-                <p class="p-lateral"><img id="icono" src="/assets/github.png" alt="icono github"> <a href="https://github.com/Mar8787/portfolio" target="_blank">Portfolio Mar8787</a>
-                </p>
+                <p class="p-lateral"><img id="icono" src="/assets/mail.png" alt="icono mail">
+                    marsanchezsevillano@gmail.com</p>
                 <p class="p-lateral"><img id="icono" src="/assets/casa.png" alt="icono casa"> Jerez (Cádiz)</p>
             </div>
 
             <hr class="hr-lateral">
 
-            <div class="laboral">
-                <h3 class="h-laboral">Experiencia laboral</h3>
-                <h4 class="h4-lateral">Desarrolladora de WordPress</h4>
-                <p class="p-lateral">L3G MARKETING <br> Marzo 2025 a Mayo 2025 </p>
+            <div class="laboral">   
+                <h3 class="h-laboral">Educación</h3>
+                <h4 class="h4-lateral">Ciclo Formativo Superior en Desarollo de Aplicaciones Web</h4>
+                <p class="p-lateral">Albor Croft | Cursando </p>
                 <ul id="lista-lateral">
-                    <li>Desarrollo y personalización de sitios web corporativos con WordPress.</li>
-                    <li>Maquetación de páginas con HTML5 y CSS3, aplicando estilos responsivos.</li>
-                    <li>Instalación, configuración y adaptación de temas y plugins.</li>
-                    <li>Colaboración en proyectos de marketing digital, integrando web y estrategia de contenidos.</li>
-                    <li>Uso de herramientas de gestión y trabajo en equipo en entorno profesional.</li>
+                    <li>Gestión de sistemas informáticos adaptados a aplicaciones web.</li>
+                    <li>Diseño y administración de bases de datos con MySQL.</li>
+                    <li>Programación en Java: POO, estructuras de control, algoritmos modulares.</li>
+                    <li>HTML5, CSS3, JavaScript y XML para construcción de interfaces web.</li>
+                    <li>Desarrollo full-stack: cliente y servidor (PHP, Java, despliegue).</li>
+                    <li>Publicación y despliegue de apps: servidores web, documentación y control de versiones.</li>
+                    <li>UX/UI: diseño accesible y funcional.</li>
+
                 </ul>
             </div>
         </div>
@@ -54,20 +55,19 @@
             </div>
 
             <div class="educacion">
-                <h3 class="h3-general">Educación</h3>
+                <h3 class="h3-general">Experiencia laboral</h3>
+
+                
                 <div class="DAW">
-                    <h4 class="h4-general">Ciclo Formativo Superior en Desarollo de Aplicaciones Web
-                        <br>
-                        Albor Croft Ilerna | Cursando
-                    </h4>
+                    <h4 class="h4-general">Desarrolladora de WordPress</h4>
+                    <p class="p-general">L3G MARKETING <br> Marzo 2025 a Mayo 2025 </p>
                     <ul id="lista-general">
-                        <li>Gestión de sistemas informáticos adaptados a aplicaciones web.</li>
-                        <li>Diseño y administración de bases de datos con MySQL.</li>
-                        <li>Programación en Java: POO, estructuras de control, algoritmos modulares.</li>
-                        <li>HTML5, CSS3, JavaScript y XML para construcción de interfaces web.</li>
-                        <li>Desarrollo full-stack: cliente y servidor (PHP, Java, despliegue).</li>
-                        <li>Publicación y despliegue de apps: servidores web, documentación y control de versiones.</li>
-                        <li>UX/UI: diseño accesible y funcional.
+                        <li>Desarrollo y personalización de sitios web corporativos con WordPress.</li>
+                        <li>Maquetación de páginas con HTML5 y CSS3, aplicando estilos responsivos.</li>
+                        <li>Instalación, configuración y adaptación de temas y plugins.</li>
+                        <li>Colaboración en proyectos de marketing digital, integrando web y estrategia de contenidos.
+                        </li>
+                        <li>Uso de herramientas de gestión y trabajo en equipo en entorno profesional.</li>
                     </ul>
                 </div>
 
@@ -83,6 +83,7 @@
                         <li>Rigurosidad, organización y resolución de problemas.</li>
                     </ul>
                 </div>
+
             </div>
         </div>
     </div>
