--- a/cv.html
+++ b/cv.html
@@ -5,28 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/style_cv.css">
-    <title>CV Mar</title>
+    <title>Curriculum VitaeV</title>
 </head>
 
 <body>
-    <div class="padre">
-        <div class="lateral">
-            <img id="foto" src="/assets/carnet.jpg" alt="foto carnet">
-            <div class="contacto">
-                <h3 class="h-contacto">Contacto</h3>
-                <p class="p-lateral"><img id="icono" src="/assets/telefono.png" alt="icono movil"> 628585717</p>
-                <p class="p-lateral"><img id="icono" src="/assets/mail.png" alt="icono mail">
+    <div class="father">
+        <div class="left-sidebar">
+            <img id="photo" src="/assets/carnet.jpg" alt="foto carnet">
+            <div class="contact">
+                <h3 class="h-contact">Contacto</h3>
+                <p id="tlf" class="p-left-sidebar"><img class="icon" src="/assets/telefono.png" alt="icono movil"> 628585717</p>
+                <p id="email" class="p-left-sidebar"><img class="icon" src="/assets/mail.png" alt="icono mail">
                     marsanchezsevillano@gmail.com</p>
-                <p class="p-lateral"><img id="icono" src="/assets/casa.png" alt="icono casa"> Jerez (Cádiz)</p>
+                <p id="adress" class="p-left-sidebar"><img class="icon" src="/assets/casa.png" alt="icono casa"> Jerez (Cádiz)</p>
             </div>
 
-            <hr class="hr-lateral">
+            <hr class="hr-left-sidebar">
 
-            <div class="laboral">   
-                <h3 class="h-laboral">Educación</h3>
-                <h4 class="h4-lateral">Ciclo Formativo Superior en Desarollo de Aplicaciones Web</h4>
-                <p class="p-lateral">Albor Croft | Cursando </p>
-                <ul id="lista-lateral">
+            <div class="education">   
+                <h3 class="h-education">Educación</h3>
+                <h4 id="qualification" class="h4-left-sidebar">Ciclo Formativo Superior en Desarollo de Aplicaciones Web</h4>
+                <p id="school" class="p-left-sidebar">Albor Croft</p>
+                <p id="start-date-edu" class="p-left-sidebar">Cursando</p>
+                <p id="end-date-edu" class="p-left-sidebar"></p>
+                <ul id="list-left-sidebar">
                     <li>Gestión de sistemas informáticos adaptados a aplicaciones web.</li>
                     <li>Diseño y administración de bases de datos con MySQL.</li>
                     <li>Programación en Java: POO, estructuras de control, algoritmos modulares.</li>
@@ -34,18 +36,17 @@
                     <li>Desarrollo full-stack: cliente y servidor (PHP, Java, despliegue).</li>
                     <li>Publicación y despliegue de apps: servidores web, documentación y control de versiones.</li>
                     <li>UX/UI: diseño accesible y funcional.</li>
-
                 </ul>
             </div>
         </div>
 
         <div class="general">
-            <div class="cabecera">
+            <div class="title-bar">
                 <h1>Mar Sánchez Sevillano</h1>
                 <h2>Developer</h2>
             </div>
 
-            <div class="sobre-mi">
+            <div class="about-me">
                 <h3 class="h3-general">Sobre mí</h3>
                 <p class="p-general">Desarrolladora de aplicaciones web, con formación en Java, MySQL, HTML, CSS,
                     JavaScript y PHP.
@@ -54,14 +55,13 @@
                 <hr class="hr-general">
             </div>
 
-            <div class="educacion">
+            <div class="work">
                 <h3 class="h3-general">Experiencia laboral</h3>
-
                 
                 <div class="DAW">
                     <h4 class="h4-general">Desarrolladora de WordPress</h4>
                     <p class="p-general">L3G MARKETING <br> Marzo 2025 a Mayo 2025 </p>
-                    <ul id="lista-general">
+                    <ul id="list-general">
                         <li>Desarrollo y personalización de sitios web corporativos con WordPress.</li>
                         <li>Maquetación de páginas con HTML5 y CSS3, aplicando estilos responsivos.</li>
                         <li>Instalación, configuración y adaptación de temas y plugins.</li>
@@ -77,7 +77,7 @@
                         I.E.S Cornelio Balbo | 2009-2011
                     </h4>
                     <p class="p-general">Competencias transferibles a la programación:</p>
-                    <ul id="lista-general">
+                    <ul id="list-general">
                         <li>Gestión y análisis de datos con criterios de calidad.</li>
                         <li>Documentación técnica clara y precisa.</li>
                         <li>Rigurosidad, organización y resolución de problemas.</li>
