Fixed name of class and ids

--- a/cv.html
+++ b/cv.html
@@ -9,44 +9,54 @@
 </head>
 
 <body>
-    <div class="father">
+    <div id="father">
         <div class="left-sidebar">
             <img id="photo" src="/assets/carnet.jpg" alt="foto carnet">
-            <div class="contact">
-                <h3 class="h-contact">Contacto</h3>
-                <p id="tlf" class="p-left-sidebar"><img class="icon" src="/assets/telefono.png" alt="icono movil"> 628585717</p>
+            <div id="contact">
+                <h3 class="title-h" id="h-contact">Contacto</h3>
+                <p id="tlf" class="p-left-sidebar"><img class="icon" src="/assets/telefono.png" alt="icono movil">
+                    999999999</p>
                 <p id="email" class="p-left-sidebar"><img class="icon" src="/assets/mail.png" alt="icono mail">
-                    marsanchezsevillano@gmail.com</p>
-                <p id="adress" class="p-left-sidebar"><img class="icon" src="/assets/casa.png" alt="icono casa"> Jerez (Cádiz)</p>
+                    ejemplo@gmail.com</p>
+                <p id="adress" class="p-left-sidebar"><img class="icon" src="/assets/casa.png" alt="icono casa"> Ciudad
+                    (Provincia)</p>
             </div>
 
             <hr class="hr-left-sidebar">
 
-            <div class="education">   
-                <h3 class="h-education">Educación</h3>
-                <h4 id="qualification" class="h4-left-sidebar">Ciclo Formativo Superior en Desarollo de Aplicaciones Web</h4>
-                <p id="school" class="p-left-sidebar">Albor Croft</p>
-                <p id="start-date-edu" class="p-left-sidebar">Cursando</p>
+            <div id="education">
+                <h3 class="title-h" id="h-education">Educación</h3>
+                <h4 id="qualification" class="h4-left-sidebar">Nombre de los estudios
+                </h4>
+                <p id="school" class="p-left-sidebar">Nombre del centro de estudios</p>
+                <p id="start-date-edu" class="p-left-sidebar">Inicio fecha | Fin fecha </p>
                 <p id="end-date-edu" class="p-left-sidebar"></p>
-                <ul id="list-left-sidebar">
-                    <li>Gestión de sistemas informáticos adaptados a aplicaciones web.</li>
-                    <li>Diseño y administración de bases de datos con MySQL.</li>
-                    <li>Programación en Java: POO, estructuras de control, algoritmos modulares.</li>
-                    <li>HTML5, CSS3, JavaScript y XML para construcción de interfaces web.</li>
-                    <li>Desarrollo full-stack: cliente y servidor (PHP, Java, despliegue).</li>
-                    <li>Publicación y despliegue de apps: servidores web, documentación y control de versiones.</li>
-                    <li>UX/UI: diseño accesible y funcional.</li>
+                <ul class="list-left-sidebar">
+                    <li>Aptitudes adquiridas.</li>
+                </ul>
+            </div>
+
+            <hr class="hr-left-sidebar">
+
+            <div id="skills">
+                <h3 id="h-skills" class="title-h">Habilidades</h3>
+                <ul class="list-left-sidebar">
+                    <li>Enumeración de habilidades interesantes.</li>
+                </ul>
+                <h4 id="languages" class="h4-left-sidebar">Idiomas</h4>
+                <ul class="list-left-sidebar">
+                    <li>Inglés C1.</li>
                 </ul>
             </div>
         </div>
 
-        <div class="general">
+        <div id="general">
             <div class="title-bar">
-                <h1>Mar Sánchez Sevillano</h1>
+                <h1>Juanita Rodríguez Sotomonte</h1>
                 <h2>Developer</h2>
             </div>
 
-            <div class="about-me">
+            <div id="about-me">
                 <h3 class="h3-general">Sobre mí</h3>
                 <p class="p-general">Desarrolladora de aplicaciones web, con formación en Java, MySQL, HTML, CSS,
                     JavaScript y PHP.
@@ -55,32 +65,14 @@
                 <hr class="hr-general">
             </div>
 
-            <div class="work">
+            <div id="work">
                 <h3 class="h3-general">Experiencia laboral</h3>
-                
-                <div class="DAW">
-                    <h4 class="h4-general">Desarrolladora de WordPress</h4>
-                    <p class="p-general">L3G MARKETING <br> Marzo 2025 a Mayo 2025 </p>
-                    <ul id="list-general">
-                        <li>Desarrollo y personalización de sitios web corporativos con WordPress.</li>
-                        <li>Maquetación de páginas con HTML5 y CSS3, aplicando estilos responsivos.</li>
-                        <li>Instalación, configuración y adaptación de temas y plugins.</li>
-                        <li>Colaboración en proyectos de marketing digital, integrando web y estrategia de contenidos.
-                        </li>
-                        <li>Uso de herramientas de gestión y trabajo en equipo en entorno profesional.</li>
-                    </ul>
-                </div>
 
-                <div class="SAM">
-                    <h4 class="h4-general">Ciclo Formativo Superior en Salud Ambiental
-                        <br>
-                        I.E.S Cornelio Balbo | 2009-2011
-                    </h4>
-                    <p class="p-general">Competencias transferibles a la programación:</p>
+                <div id="data-work">
+                    <h4 class="h4-general">Desarrolladora Frontend</h4>
+                    <p class="p-general">Nombre de la empresa <br> 07/03/2025 | 04/09/2025 </p>
                     <ul id="list-general">
-                        <li>Gestión y análisis de datos con criterios de calidad.</li>
-                        <li>Documentación técnica clara y precisa.</li>
-                        <li>Rigurosidad, organización y resolución de problemas.</li>
+                        <li>Desarrollo y personalización de sitios web corporativos.</li>
                     </ul>
                 </div>
 
