--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
             <label for="languages-input" class="form-label mt-3">Idiomas</label>
             <input id="languages-input" type="text" class="form-control" placeholder="Ej. Inglés C1"
                 aria-describedby="languages-help">
-            <div id="languages-help" class="form-text">Introduce los idiomas que conoces y su cualificación de uno en
-                uno.</div>
+            <div id="languages-help" class="form-text">Introduce los idiomas que conoces y su cualificación.</div>
         </div>
 
         <div class="cnt-data mb-3">
@@ -162,7 +161,7 @@
         <div class="container py-4">
             <div class="row align-items-center">
                 <div class="text-center">
-                    <p class="mb-0">© 2026 · Generador de CV · Mar Sánchez Sevillano · 2ºDAW</p>
+                    <p class="mb-0">© 2026 · Generador de CV · 2ºDAW</p>
                 </div>
             </div>
         </div>
